<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HAliceJ</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_output">OutputActivity</string>
    <string name="cut">Cut</string>
    <string name="copy">Copy</string>
    <string name="paste">Paste</string>
    <string name="find">Find</string>
    <string name="compile">Compile</string>

</resources>
