<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="edu.calpoly.halicej.MainActivity" >
    
    <item
        android:id="@+id/cut"
        android:orderInCategory="100"
        android:title="@string/cut"
        app:showAsAction="never"/>
    
    <item
        android:id="@+id/copy"
        android:orderInCategory="100"
        android:title="@string/copy"
        app:showAsAction="never"/>
    
    <item
        android:id="@+id/paste"
        android:orderInCategory="100"
        android:title="@string/paste"
        app:showAsAction="never"/>
    
    <item
        android:id="@+id/find"
        android:orderInCategory="100"
        android:title="@string/find"
        app:showAsAction="never"/>
    
    <item
        android:id="@+id/compile"
        android:orderInCategory="100"
        android:title="@string/compile"
        app:showAsAction="always"/>

</menu>
